# fxx

./: .gitignore  CMakeLists.txt
doc/: Doxyfile.in
include/fxx/: fxx.h  meta.h  tuple.h
include/fxx/cxx/: is_nothrow_convertible.h
include/fxx/meta/: detect.h  functional.h  indices.h  op.h  tuple.h
include/fxx/tuple/: dup.h  find.h  first.h  flip.h  fold.h  map.h  pick.h  reduce.h  skip.h  slice.h  take.h  tmp.h
test/: CMakeLists.txt
test/src/: cxx.cpp  main.cpp  meta.cpp
test/src/tuple/: dup.cpp  find.cpp  first.cpp  flip.cpp  fold.cpp  map.cpp  pick.cpp  reduce.cpp  skip.cpp  slice.cpp  take.cpp  unsafe.h
